# pipitor

./: .env  .gitignore  .travis.yml  CONFIG.md  Cargo.toml  Cross.toml  Pipitor.example.dhall  Pipitor.example.toml  README.md  package.dhall  rustfmt.toml  schema.dhall
.cargo/: config.toml
.github/workflows/: build-containers.yml  ci.yml  cicd.yml  release.yml
docker/aarch64-unknown-linux-gnu/: Dockerfile
docker/armv7-unknown-linux-gnueabihf/: Dockerfile
docker/armv7-unknown-linux-musleabihf/: Dockerfile
docker/x86_64-unknown-freebsd/: Dockerfile  install.sh
migrations/2019-02-25-003127_create_twitter_tokens/: down.sql  up.sql
migrations/2019-03-27-112244_create_tweets/: down.sql  up.sql
migrations/2019-04-26-182954_create_last_tweet/: down.sql  up.sql
migrations/2020-03-26-124214_create_websub_subscriptions/: down.sql  up.sql
migrations/2020-03-26-124224_create_websub_active_subscriptions/: down.sql  up.sql
migrations/2020-03-26-124235_create_websub_pending_subscriptions/: down.sql  up.sql
migrations/2020-03-26-124252_create_websub_renewing_subscriptions/: down.sql  up.sql
migrations/2020-04-03-064704_create_entries/: up.sql
migrations/2020-11-17-121527_ongoing_retweets/: down.sql  up.sql
migrations/2020-12-09-052909_alter_websub_renewing_subscriptions_primary_key/: down.sql  up.sql
scripts/: before_deploy.ps1  before_deploy.sh  install.sh  script.sh
src/: app.rs  credentials.rs  feed.rs  lib.rs  manifest.rs  migrations.rs  models.rs  query.rs  router.rs  rules.rs  schema.patch  schema.rs  socket.rs  twitter.rs  util.rs  websub.rs
src/app/: builder.rs  core.rs  sender.rs  shutdown.rs  twitter_backfill.rs  twitter_list_timeline.rs  twitter_request_ext.rs
src/app/sender/: retweet_queue.rs
src/feed/testcases/: expected.xml  media_description_to_atom_summary.xslt  videos.xml
src/socket/: unix.rs
src/twitter/: api.rs  list_timeline.rs  models.rs  text.rs
src/twitter/api/: account.rs  lists.rs  oauth.rs  statuses.rs  tweets.rs  users.rs
src/twitter/list_timeline/: interval.rs
src/twitter/testcases/: status_912783930431905797.json
src/util/: concat_body.rs  connection.rs  first.rs  http_response_future.rs  http_service.rs  r2d2.rs  serde_wrapper.rs  time.rs
src/websub/: hub.rs  subscriber.rs
src/websub/subscriber/: scheduler.rs  service.rs  subscription_renewer.rs
src/websub/testcases/: feed.xml
tests/: example_manifest.rs
