[package]
name = "pipitor"
version = "0.3.0-alpha.9.3"
edition = "2018"
authors = ["Daiki Mizukami <tesaguriguma@gmail.com>"]
license = "AGPL-3.0-only"
readme = "README.md"
repository = "https://github.com/tesaguri/pipitor"
documentation = "https://docs.rs/pipitor/0.3.0-alpha.9.3/pipitor/"
description = """
A Twitter bot that gathers, filters and Retweets Tweets automatically.
"""

[[bin]]
name = "pipitor"
path = "src/bin/pipitor/main.rs"

[dependencies]
anyhow = "1"
atoi = "0.4"
atom = { version = "0.9", package = "atom_syndication" }
auto_enums = "0.7"
base64 = "0.13"
bytes = "0.5"
cfg-if = "1"
diesel = { version = "1.4.5", default-features = false, features = ["r2d2", "sqlite"] }
diesel_migrations = { version = "1", default-features = false, features = ["sqlite"] }
dotenv = "0.15"
env_logger = "0.8"
flate2 = "1"
fs2 = "0.4"
futures = { version = "0.3", default-features = false, features = ["async-await", "std"] }
hex = "0.4"
hmac = "0.10"
http = "0.2"
http-body = "0.3"
http-serde = "1"
hyper = { version = "0.13", default-features = false, features = ["stream"] }
json = { version = "1", package = "serde_json" }
listenfd = "0.3"
log = "0.4.6"
mime = "0.3"
oauth1 = { version = "0.4", package = "oauth1-request" }
oauth-credentials = { version = "0.2", features = ["serde"] }
pin-project = "1"
rand = "0.7"
regex = "1.0.3"
rss = "1"
serde = { version = "1.0.34", features = ["derive", "rc"] }
serde_derive = "1.0.34"
serde_urlencoded = "0.7"
sha-1 = "0.9"
smallvec = { version = "1", features = ["serde"] }
string = { version = "0.2", default-features = false }
structopt = "0.3"
thiserror = "1"
tokio = { version = "0.2", features = ["io-std", "io-util", "signal", "stream", "tcp", "time", "uds"] }
tower-service = "0.3"
tower-util = "0.3"
toml = "0.5"

serde_dhall = { version = "0.9", optional = true }

ct-logs = { version = "0.8", optional = true }
hyper-rustls = { version = "0.21", optional = true }
rustls-pkg = { version = "0.18", package = "rustls", optional = true }
webpki-roots = { version = "0.21", optional = true }

hyper-tls = { version = "0.4", optional = true }

libsqlite3-sys = { version = ">=0.8.0, <0.19.0", optional = true }

[[test]]
name = "example_manifest"
# XXX: `native-tls` is included because Cargo automatically builds the `bin` target,
# which requires a TLS backend.
required-features = ["dhall", "native-tls"]

[features]
default = ["native-tls"]
dhall = ["serde_dhall"]
native-tls = ["hyper-tls"]
openssl-vendored = ["hyper-tls/vendored"]
rustls = ["ct-logs", "hyper-rustls", "rustls-pkg", "webpki-roots"]
sqlite-bundled = ["libsqlite3-sys/bundled"]

[dev-dependencies]
hyper = { version = "0.13", default-features = false, features = ["tcp"] }
tokio = { version = "0.2", features = ["macros"] }
tokio-test = "0.2"
tower-test = "0.3"
